Implemento Liberica NIK y cambio getSystemClipboard() por xclip